[project]
name = "toolgrpo"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.6.0",
    "unsloth>=2025.3.19",
    "vllm>=0.8.4",
    "wandb>=0.19.10",
    "huggingface-hub[cli]>=0.30.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/toolgrpo"]
