[project]
name = "toolgrpo"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "unsloth>=2025.4.4",
    "vllm>=0.8.5",
    "wandb>=0.19.10",
    "numpy>=2.2.5",
    "sympy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.12.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/toolgrpo"]
